--- a/index.html
+++ b/index.html
@@ -24,3 +24,4 @@
 <body>
     <canvas id="particle-canvas"></canvas>
     <script>
+        const canvas = document.getElementById('particle-canvas');
