--- a/index.html
+++ b/index.html
@@ -26,3 +26,4 @@
     <script>
         const canvas = document.getElementById('particle-canvas');
         const ctx = canvas.getContext('2d');
+        canvas.width = window.innerWidth;
