--- a/index.html
+++ b/index.html
@@ -27,3 +27,4 @@
         const canvas = document.getElementById('particle-canvas');
         const ctx = canvas.getContext('2d');
         canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
