--- a/index.html
+++ b/index.html
@@ -35,3 +35,4 @@
             constructor(x, y) {
                 this.x = x;
                 this.y = y;
+                this.size = Math.random() * 5 + 1;
