--- a/index.html
+++ b/index.html
@@ -36,3 +36,4 @@
                 this.x = x;
                 this.y = y;
                 this.size = Math.random() * 5 + 1;
+                this.speedX = Math.random() * 3 - 1.5;
