--- a/index.html
+++ b/index.html
@@ -49,3 +49,4 @@
             draw() {
                 ctx.fillStyle = 'white';
                 ctx.strokeStyle = 'blue';
+                ctx.lineWidth = 2;
