--- a/index.html
+++ b/index.html
@@ -50,3 +50,4 @@
                 ctx.fillStyle = 'white';
                 ctx.strokeStyle = 'blue';
                 ctx.lineWidth = 2;
+                ctx.beginPath();
