--- a/index.html
+++ b/index.html
@@ -51,3 +51,4 @@
                 ctx.strokeStyle = 'blue';
                 ctx.lineWidth = 2;
                 ctx.beginPath();
+                ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
