--- a/index.html
+++ b/index.html
@@ -54,3 +54,4 @@
                 ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
                 ctx.closePath();
                 ctx.fill();
+                ctx.stroke();
