--- a/index.html
+++ b/index.html
@@ -60,3 +60,4 @@
 
         function createParticles() {
             const x = Math.random() * canvas.width;
+            const y = Math.random() * canvas.height;
