--- a/index.html
+++ b/index.html
@@ -61,3 +61,4 @@
         function createParticles() {
             const x = Math.random() * canvas.width;
             const y = Math.random() * canvas.height;
+            particles.push(new Particle(x, y));
