--- a/index.html
+++ b/index.html
@@ -66,3 +66,4 @@
 
         function animate() {
             requestAnimationFrame(animate);
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
