--- a/index.html
+++ b/index.html
@@ -68,3 +68,4 @@
             requestAnimationFrame(animate);
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
+            for (let i = 0; i < particles.length; i++) {
