--- a/index.html
+++ b/index.html
@@ -69,3 +69,4 @@
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
             for (let i = 0; i < particles.length; i++) {
+                particles[i].update();
