--- a/index.html
+++ b/index.html
@@ -70,3 +70,4 @@
 
             for (let i = 0; i < particles.length; i++) {
                 particles[i].update();
+                particles[i].draw();
