--- a/index.html
+++ b/index.html
@@ -73,3 +73,4 @@
                 particles[i].draw();
 
                 if (particles[i].size <= 0.2) {
+                    particles.splice(i, 1);
